# wpa_agv_optimization

./: .gitignore  README.md  benchmark_compare_old_seeded_runs.csv  benchmark_compare_old_seeded_summary.md  benchmark_fixed_inputs_runs.csv  benchmark_fixed_inputs_summary.md  config.py  evaluator.py  initializer.py  main.py  models.py  pathfinding.py  pyproject.toml  run_fixed_benchmarks.py  scenario_inputs.py  traffic_manager.py  utils.py  wpa_ops.py  第七次汇报.md
docs/: contents.md
docs/benchmarks/: benchmark_runs.csv  benchmark_summary.md
frontend/: analysis.js  analysis.test.js  app.js  data-sources.js  data-sources.test.js  index.html  style.css
frontend/data/: manifest.json  scenario-1.json  scenario-2.json  scenario-3.json
frontend/data/ga/: scenario-1.json  scenario-2.json  scenario-3.json
frontend/data/improved/: result.json  scenario-1.json  scenario-2.json  scenario-3.json
scripts/: run_fixed_benchmarks.py
src/wpa_agv_optimization/: __init__.py  __main__.py  classic_baselines.py  config.py  evaluator.py  exporter.py  initializer.py  main.py  models.py  original_wpa.py  pathfinding.py  scenario_inputs.py  traffic_manager.py  utils.py  wpa_ops.py
tests/: __init__.py  test_agv_id_bounds.py  test_benchmark_exports.py  test_classic_baselines.py  test_evaluator_determinism.py  test_evaluator_infeasible.py  test_exporter.py  test_incremental_evaluator.py  test_operator_config.py  test_original_wpa.py  test_pathfinding.py  test_scenario_inputs.py  test_service_window_conflict.py  test_traffic_manager.py  test_utils.py  test_wpa_ops.py
(+7 files in other folders)
